@@ -78,7 +78,7 @@ module TMail
       end
  
       def unquote_base64_and_convert_to(text, to, from)
-        convert_to(Base64.decode(text).first, to, from)
+        convert_to(Base64.decode(text), to, from)
       end
 
       begin
